# ocra

./: CMakeLists.txt  README.md  ocra.sh
src/: CMakeLists.txt  main.cpp
src/ocra/: CMakeLists.txt  ocra.cpp  ocra.hpp
test/: CMakeLists.txt  main.cpp
test/asserts/: exception.hpp
test/listener/: listener.hpp
test/mock/: CMakeLists.txt  hashfunctions.cpp  hashfunctions.hpp
test/testcases/: CMakeLists.txt  cryptofunctionparsetest.cpp  datainputparsetest.cpp  ocrafailuretest.cpp  ocratest.cpp  validsuiteparsetest.cpp  versionparsetest.cpp
